apps/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: silver-guardian-frontend
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
