apps/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: www.silver-guardian.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: silver-guardian-frontend
                port:
                  number: 80
    - host: silver-guardian.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: silver-guardian-frontend
                port:
                  number: 80
